--- a/project_2/index.html
+++ b/project_2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Responsive Webpage1</title>
+  <title>Responsive Webpage</title>
   <meta name=viewport content="width=device-width, initial-scale=1">
    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
    <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet'>
