--- a/project_2/index.html
+++ b/project_2/index.html
@@ -23,34 +23,34 @@
     <img src="images/responsive-layout-profile.png" alt="Profile Picture" class="profile"/>
     <p class="description">Hi! I'm a front-end web developer who loves responsive design, but gets frustrated with CSS. I am currently in the front-end web development Techdegree at treehouse, and I can't wait to put my skills to use!</p>
   </header>
-  <section>
+  <div class ="section">
     <h2 id="portfolio">Portfolio</h2>
-    <div class="pic1">
+    <div class="col">
       <img src="images/portfolio-1.png" alt="Screenshot of marketing page" class="screenshot"/>
       <h3>Marketing Page</h3>
       <p>This project shows the front page of a marketing website meant for a specific busines I'm interested in.</p>
     </div>
-    <div class="pic2">
+    <div class="col">
       <img src="images/portfolio-2.png" alt="Screenshot of search page" class="screenshot"/>
       <h3>Search Page</h3>
       <p>This project searches through a specific database to find information that the user is trying to look up.</p>
     </div>
-    <div class="pic3">
+    <div class="col">
       <img src="images/portfolio-3.png" alt="Screenshot of travel app" class="screenshot"/>
       <h3>Travel App</h3>
       <p>This project compartes travel times based on different transportation methods and tells you the best one.</p>
     </div>
-    <div class="pic4">
+    <div class="col">
       <img src="images/portfolio-4.png" alt="Screenshot of map of favorite spots" class="screenshot"/>
       <h3>Map of Favorite Spots</h3>
       <p>This project uses mapping APIs to plot points for my favorte spots on the city for a do-it-youself walking tour.</p>
     </div>
-    <div class="pic5">
+    <div class="col">
       <img src="images/portfolio-5.png" alt="Screenshot of photo gallery" class="screenshot"/>
       <h3>Photo Gallery</h3>
       <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
     </div>
-    <div class="pic6">
+    <div class="col">
       <img src="images/portfolio-6.png" alt="Screenshot of calculator" class="screenshot"/>
       <h3>Calculator</h3>
       <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
@@ -59,7 +59,7 @@
       <h2>Skills</h2>
       <p>I am currently learning HTML, CSS, and JavaScript.</p>
     </div>
-  </section>
+  </div>
 
   <div class="contact-div">
       <h2 id="contact">Contact</h2>
