--- a/project_2/index.html
+++ b/project_2/index.html
@@ -71,14 +71,16 @@
     </div>
 
     <footer>
-
+        <nav class="footer-nav">
           <h3 id="end-name">Cyndi Norwood</h3>
-            <div class="footer-sm"><a href="#top">BACK TO TOP</a></div>
-                <div class="footer-lrg">
-              <a href="#top">HOME</a>
-              <a href="#portfolio">PORTFOLIO</a>
-              <a href="#skills">SKILLS</a>
-              <a href="#contact">CONTACT</a>
+            <a class="top" href="#top">Back to Top</a>
+            <div class="nav-end">
+            <ul class="footer-ul">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#contact">Contact</a></li>
+              </ul>
           </div>
     </footer>
 
