--- a/project_2/index.html
+++ b/project_2/index.html
@@ -58,16 +58,19 @@
      <h3>Calculator</h3>
      <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
    </div>
+
    <div class="skills">
      <h2>Skills</h2>
      <p>I am currently learning HTML, CSS, and JavaScript.</p>
    </div>
- </div>
+
  <div class="contact-div">
       <h2 id="contact">Contact</h2>
       <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-      <p >Phone: <b>1(222) 123-4556</b></p>
-      <p >Email: <b>cyndi@whatever.com</b></p>
+      <br>
+      <p>Phone: <b>1(222) 123-4556</b></p>
+      <br>
+      <p>Email: <b>cyndi@whatever.com</b></p>
     </div>
 
     <footer>
@@ -82,6 +85,7 @@
                         <li><a href="#contact">Contact</a></li>
               </ul>
           </div>
+        </nav>
     </footer>
 
 
