--- a/project_2/index.html
+++ b/project_2/index.html
@@ -60,7 +60,7 @@
    </div>
 
    <div class="skills">
-     <h2>Skills</h2>
+     <h2 id="skills">Skills</h2>
      <p>I am currently learning HTML, CSS, and JavaScript.</p>
    </div>
 
