--- a/project_2/index.html
+++ b/project_2/index.html
@@ -26,7 +26,7 @@
     <img src="images/responsive-layout-profile.png" alt="Profile Picture" class="profile"/>
     <p class="description">Hi! I'm a front-end web developer who loves responsive design, but gets frustrated with CSS. I am currently in the front-end web development Techdegree at treehouse, and I can't wait to put my skills to use!</p>
   </header>
-
+<div class="aricle_wrap">
 <h2 id="portfolio">Portfolio</h2>
    <div class="article">
      <img src="images/portfolio-1.png" alt="Screenshot of marketing page" class="screenshot"/>
@@ -58,7 +58,7 @@
      <h3>Calculator</h3>
      <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
    </div>
-
+</div>
    <div class="skills">
      <h2 id="skills">Skills</h2>
      <p>I am currently learning HTML, CSS, and JavaScript.</p>
